crates/analyzer/tests/snapshots/errors__string_non_int_type_arg.snap
---
source: crates/analyzer/tests/errors.rs
expression: "error_string(\"[snippet]\", &src)"

---
error: invalid `String` type argument
  ┌─ [snippet]:3:16
  │
3 │   let x: String<u8>
  │                ^^^^ expected an integer
  │
  = Example: String<100>


