crates/analyzer/tests/snapshots/errors__struct_call_bad_args.snap
---
source: crates/analyzer/tests/errors.rs
expression: "error_string(&path, &src)"

---
error: `House` expects 2 arguments, but 3 were provided
  ┌─ compile_errors/struct_call_bad_args.fe:8:27
  │
8 │         my_house: House = House(price=false, vacant=100, bar=address(0))
  │                           ^^^^^ -----------  ----------  -------------- supplied 3 arguments
  │                           │                               
  │                           expects 2 arguments

error: argument label mismatch
  ┌─ compile_errors/struct_call_bad_args.fe:8:33
  │
8 │         my_house: House = House(price=false, vacant=100, bar=address(0))
  │                                 ^^^^^ expected `vacant`
  │
  = Note: arguments must be provided in order.

error: argument label mismatch
  ┌─ compile_errors/struct_call_bad_args.fe:8:46
  │
8 │         my_house: House = House(price=false, vacant=100, bar=address(0))
  │                                              ^^^^^^ expected `price`
  │
  = Note: arguments must be provided in order.


