crates/analyzer/tests/snapshots/errors__struct_private_constructor.snap
---
source: crates/analyzer/tests/errors.rs
expression: "error_string(&path, test_files::fixture(path))"

---
error: Can not call private constructor of struct `House` 
  ┌─ compile_errors/struct_private_constructor.fe:2:5
  │
2 │     vacant: bool
  │     ^^^^^^^^^^^^ Field `vacant` is private
  │
  = Suggestion: implement a method `new(...)` on struct `House` to call the constructor and return the struct


