crates/analyzer/tests/snapshots/errors__trait_fn_with_generic_params.snap
---
source: crates/analyzer/tests/errors.rs
expression: "error_string(&path, test_files::fixture(path))"
---
error: generic function parameters aren't yet supported outside of struct functions
  ┌─ compile_errors/trait_fn_with_generic_params.fe:4:18
  │
4 │     fn generic_fn<T: Bar>(self, val: T)
  │                  ^^^^^^^^ This can not appear here
  │
  = Hint: Struct functions can have generic parameters


